<resources>
    <string name="app_name">MiPrimerAplicacion</string>
    <string name="label">Usuario</string>
    <string name="name">Manuel</string>

    <!-- Login -->
    <string name="activity_login_til_password">Contraseña</string>
    <string name="activity_login_tv_error">Usuario o contraseña erroneas</string>
    <string name="activity_login_btn_registro">Registro</string>
    <string name="activity_login_btn_login">Login</string>
    <string name="activity_login_tv_list">List</string>
    <string name="activity_login_tv_login_version">Version %s</string>
    <string name="activity_login_til_login_version">Numero de version</string>


    <!-- Welcome -->
    <string name="activity_welcome_tv_welcome">Bienvenido :D</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_login_til_user_version_helper_text">Coloca la version del app</string>

</resources>