<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteY="300dp"
    android:background="@color/white"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_fragment_login_user"
            app:startIconDrawable="@android:drawable/ic_lock_lock"
            android:hint="@string/label"
            android:textColorHint="#2196F3"
            android:textAlignment="center"
            app:helperText="Escriba el usuario por favor"
            android:layout_marginTop="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            app:boxStrokeColor="@color/til_color_default_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_gravity="center"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#673AB7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_fragment_login_password"
            app:startIconDrawable="@android:drawable/ic_lock_lock"
            android:textColorHint="#2196F3"
            android:textAlignment="center"

            app:boxStrokeColor="@color/til_color_default_selector"
            android:layout_marginTop="42dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/activity_login_til_password"
            android:gravity="center"
            app:counterMaxLength="8"
            app:counterEnabled="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/til_fragment_login_user"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_gravity="center"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#673AB7"
                android:maxLength="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_fragment_login_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/activity_login_tv_list"
            android:textColor="#3F51B5"
            android:textSize="20dp"


            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_fragment_login_register"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fragment_login_error" />

        <TextView
            android:id="@+id/tv_fragment_login_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/activity_login_tv_error"
            android:textColor="#F44336"
            android:textSize="20dp"
            android:gravity="center"


            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_fragment_login_password" />


        <TextView
            android:id="@+id/btn_fragment_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_btn_registro"
            android:layout_marginBottom="35dp"
            android:backgroundTint="#fff"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="bold"
            android:padding="15dp"



            app:layout_constraintBottom_toTopOf="@+id/btn_fragment_login_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_fragment_login_login"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/activity_login_btn_login"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="0.244" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

